--- a/index.html
+++ b/index.html
@@ -13,11 +13,11 @@
           <div id="question">
               Press Start to begin the quiz!
           </div>
-          <div id="answer-buttons" class="btn-grid">
+          <!-- <div id="answer-buttons" class="btn-grid">
             <button class="btn">Answer 1</button>
             <button class="btn">Answer 2</button>
             <button class="btn">Answer 3</button>
-            <button class="btn">Answer 4</button>
+            <button class="btn">Answer 4</button> -->
     </div>
 
     <div class="start">
