--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <div class="container">
-        <div id="question-container" class="hide">
+        <div id="question-container" >
           <div id="question">
               Press Start to begin the quiz!
           </div>
@@ -20,7 +20,7 @@
             <button class="btn">Answer 4</button>
     </div>
 
-    <div class="start">
+    <div class="start" id="hide">
          <button id="start-btn" class="start-btn btn">Start</button>
     </div>
     <footer>
